PR/45257: Ryo Shimizu: ping(8) prints bogus round-trip times after Year 2038 Clamp all time computations to 32 bits; idea from dsl@